--- a/tutorial/config.toml
+++ b/tutorial/config.toml
@@ -1,3 +1,3 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://maeddes.github.io/java-and-container/'
 languageCode = 'en-us'
 title = 'Java and container exercises'
