--- a/tutorial/hugo.toml
+++ b/tutorial/hugo.toml
@@ -1,11 +1,27 @@
 theme = "hugo-theme-relearn-main"
 
 [params]
-themeVariant = "relearn-light"
 disableLandingPageButton = true
 alwaysopen = "true"
 showVisitedLinks = true
 disableInlineCopyToClipBoard = true
+linkTitle = 'Java & Container'
+author.name = 'maeddes'
+themeVariant = [
+	{ identifier = 'relearn-auto',  name = 'Relearn Light/Dark', auto = [] },
+	{ identifier = 'relearn-light'  },
+	{ identifier = 'relearn-dark'   },
+	{ identifier = 'relearn-bright' },
+	{ identifier = 'zen-auto',      name = 'Zen Light/Dark', auto = [ 'zen-light', 'zen-dark' ] },
+	{ identifier = 'zen-light'      },
+	{ identifier = 'zen-dark'       },
+	{ identifier = 'retro-auto',    name = 'Retro Learn/Neon', auto = [ 'learn', 'neon' ] },
+	{ identifier = 'neon'           },
+	{ identifier = 'learn'          },
+	{ identifier = 'blue'           },
+	{ identifier = 'green'          },
+	{ identifier = 'red'            }
+]
 
 
 # For search functionality
