--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -6,7 +6,9 @@ on:
   push:
     branches:
       - main
-
+    paths:
+      - 'tutorial/**'
+      - '.github/**'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
