--- a/springboot/Dockerfile-jlink-alpine
+++ b/springboot/Dockerfile-jlink-alpine
@@ -1,5 +1,5 @@
 
-FROM maven:3-eclipse-temurin-21 as build
+FROM maven:3-eclipse-temurin-21 AS build
 RUN mkdir /usr/src/project
 COPY . /usr/src/project
 WORKDIR /usr/src/project
