--- a/springboot/Dockerfile-multistage-layered-jvm-flags
+++ b/springboot/Dockerfile-multistage-layered-jvm-flags
@@ -4,7 +4,7 @@ COPY src /opt/app/src
 COPY pom.xml /opt/app
 RUN --mount=type=cache,target=/root/.m2 mvn -f /opt/app/pom.xml clean package
 
-FROM eclipse-temurin:21-jre as builder
+FROM eclipse-temurin:21-jre AS builder
 WORKDIR application
 COPY --from=maven /opt/app/target/simplecode-0.0.1-SNAPSHOT.jar application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
