--- a/springboot/Dockerfile-simple-adoptopenjdk-11
+++ b/springboot/Dockerfile-simple-adoptopenjdk-11
@@ -1,3 +1,3 @@
-FROM eclipse-temurin:21-jre
+FROM adoptopenjdk:11-jre-hotspot
 COPY target/simplecode-0.0.1-SNAPSHOT.jar /opt/app.jar
 CMD ["java", "-jar", "/opt/app.jar"]
