--- a/springboot/Dockerfile-multistage-builder
+++ b/springboot/Dockerfile-multistage-builder
@@ -2,7 +2,7 @@ FROM maven:3-eclipse-temurin-21 AS build
 RUN mkdir -p /opt/app/src
 COPY src /opt/app/src
 COPY pom.xml /opt/app
-RUN mvn -f /opt/app/pom.xml clean package
+RUN mvn -f /opt/app/pom.xml package
 
 FROM eclipse-temurin:21-jre
 RUN mkdir -p /opt/app
