--- a/springboot/Dockerfile-multistage-layered-jvm-flags
+++ b/springboot/Dockerfile-multistage-layered-jvm-flags
@@ -2,7 +2,7 @@ FROM maven:3-eclipse-temurin-21 AS maven
 RUN mkdir -p /opt/app/src
 COPY src /opt/app/src
 COPY pom.xml /opt/app
-RUN --mount=type=cache,target=/root/.m2 mvn -f /opt/app/pom.xml clean package
+RUN --mount=type=cache,target=/root/.m2 mvn -f /opt/app/pom.xml package
 
 FROM eclipse-temurin:21-jre AS builder
 WORKDIR application
