--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,6 +1,9 @@
 {
 	"name": "Java",
 	"image": "mcr.microsoft.com/devcontainers/base:bullseye",
+	"runArgs": [
+		"--privileged"
+	],
 	"postCreateCommand": "(curl -sSL https://github.com/buildpacks/pack/releases/download/v0.36.0/pack-v0.36.0-linux.tgz | sudo tar -C /usr/local/bin/ --no-same-owner -xzv pack)",
 
 	"features": {
