--- a/springboot/Dockerfile-multistage-layered
+++ b/springboot/Dockerfile-multistage-layered
@@ -5,14 +5,14 @@ COPY pom.xml /opt/app
 RUN --mount=type=cache,target=/root/.m2 mvn -f /opt/app/pom.xml package
 
 FROM eclipse-temurin:21-jre AS builder
-WORKDIR application
+WORKDIR /application
 COPY --from=maven /opt/app/target/simplecode-0.0.1-SNAPSHOT.jar application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
 FROM eclipse-temurin:21-jre
-WORKDIR application
-COPY --from=builder application/dependencies/ ./
-COPY --from=builder application/spring-boot-loader/ ./
-COPY --from=builder application/snapshot-dependencies/ ./
-COPY --from=builder application/application/ ./
-ENTRYPOINT ["java","org.springframework.boot.loader.JarLauncher"]
+WORKDIR /application
+COPY --from=builder /application/dependencies/ ./    
+COPY --from=builder /application/spring-boot-loader/ ./
+COPY --from=builder /application/snapshot-dependencies/ ./
+COPY --from=builder /application/application/ ./
+ENTRYPOINT ["java","org.springframework.boot.loader.launch.JarLauncher"]
