--- a/springboot/Dockerfile-layered-otel-agent
+++ b/springboot/Dockerfile-layered-otel-agent
@@ -1,12 +1,6 @@
-FROM maven:3-eclipse-temurin-21 AS maven
-RUN mkdir -p /opt/app/src
-COPY src /opt/app/src
-COPY pom.xml /opt/app
-RUN --mount=type=cache,target=/root/.m2 mvn -f /opt/app/pom.xml package
-
 FROM eclipse-temurin:21-jre AS builder
 WORKDIR /application
-COPY --from=maven /opt/app/target/simplecode-0.0.1-SNAPSHOT.jar application.jar
+COPY target/simplecode-0.0.1-SNAPSHOT.jar application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
 FROM eclipse-temurin:21-jre
@@ -15,5 +9,7 @@ COPY --from=builder /application/dependencies/ ./
 COPY --from=builder /application/spring-boot-loader/ ./
 COPY --from=builder /application/snapshot-dependencies/ ./
 COPY --from=builder /application/application/ ./
-ENTRYPOINT ["java","-XX:+UseParallelGC","-XX:MaxRAMPercentage=75","org.springframework.boot.loader.launch.JarLauncher"]
+ADD https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar ./
+ENTRYPOINT ["java","-javaagent:/application/opentelemetry-javaagent.jar","org.springframework.boot.loader.launch.JarLauncher"]
+
 
