--- a/springboot/Dockerfile-multistage-layered-agent
+++ b/springboot/Dockerfile-multistage-layered-agent
@@ -15,5 +15,5 @@ COPY --from=builder /application/dependencies/ ./
 COPY --from=builder /application/spring-boot-loader/ ./
 COPY --from=builder /application/snapshot-dependencies/ ./
 COPY --from=builder /application/application/ ./
-ENTRYPOINT ["java","-XX:+UseParallelGC","-XX:MaxRAMPercentage=75","org.springframework.boot.loader.launch.JarLauncher"]
-
+ADD https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar ./
+ENTRYPOINT ["java","-javaagent:/application/opentelemetry-javaagent.jar","org.springframework.boot.loader.launch.JarLauncher"]
