--- a/springboot/Dockerfile-ultimate
+++ b/springboot/Dockerfile-ultimate
@@ -35,4 +35,4 @@ COPY --from=extractor /opt/app/dependencies/ ./
 COPY --from=extractor /opt/app/spring-boot-loader/ ./
 COPY --from=extractor /opt/app/snapshot-dependencies/ ./
 COPY --from=extractor /opt/app/application/ ./
-ENTRYPOINT ["java","-XX:+UseParallelGC","-XX:MaxRAMPercentage=75","org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java","-XX:+UseParallelGC","-XX:MaxRAMPercentage=75","org.springframework.boot.loader.launch.JarLauncher"]
