--- a/springboot/Dockerfile-simple-ubuntu
+++ b/springboot/Dockerfile-simple-ubuntu
@@ -1,5 +1,6 @@
 FROM ubuntu:24.04
-RUN apt update && apt install openjdk-21-jre-headless -y
+RUN apt update 
+RUN apt install openjdk-21-jre-headless -y
 COPY target/simplecode-0.0.1-SNAPSHOT.jar /opt/app.jar
 CMD ["java","-jar","/opt/app.jar"]
 
