--- a/springboot/Dockerfile-jlink-bookworm
+++ b/springboot/Dockerfile-jlink-bookworm
@@ -1,8 +1,8 @@
 
 FROM maven:3-eclipse-temurin-21 AS build
-RUN mkdir /usr/src/project
-COPY . /usr/src/project
-WORKDIR /usr/src/project
+WORKDIR /opt/app
+COPY src ./src
+COPY pom.xml ./
 RUN --mount=type=cache,target=/root/.m2 mvn package -DskipTests
 RUN jar xf target/simplecode-0.0.1-SNAPSHOT.jar
 RUN jdeps --ignore-missing-deps -q  \
@@ -10,20 +10,20 @@ RUN jdeps --ignore-missing-deps -q  \
     --multi-release 21  \
     --print-module-deps  \
     --class-path 'BOOT-INF/lib/*'  \
-    target/simplecode-0.0.1-SNAPSHOT.jar > deps.info
+    target/*.jar > deps.info
 RUN jlink \
+    --verbose \
     --add-modules $(cat deps.info) \
     --strip-debug \
     --compress 2 \
     --no-header-files \
     --no-man-pages \
-    --output /myjre
+    --output /customjre
     
-FROM debian:bookworm-slim
-ENV JAVA_HOME /user/java/jdk21
-ENV PATH $JAVA_HOME/bin:$PATH
-COPY --from=build /myjre $JAVA_HOME
-RUN mkdir /project
-COPY --from=build /usr/src/project/target/simplecode-0.0.1-SNAPSHOT.jar /project/
-WORKDIR /project
-ENTRYPOINT java -jar simplecode-0.0.1-SNAPSHOT.jar
+FROM debian:slim
+COPY --from=build /customjre /opt/jre
+ENV JAVA_HOME=/opt/jre
+ENV PATH="$PATH:$JAVA_HOME/bin"
+
+COPY --from=build /opt/app/target/simplecode-0.0.1-SNAPSHOT.jar /opt/app.jar
+ENTRYPOINT ["java","-jar","/opt/app.jar"]
