--- a/springboot/Dockerfile-jlink-alpine
+++ b/springboot/Dockerfile-jlink-alpine
@@ -1,29 +1,35 @@
-
-FROM maven:3-eclipse-temurin-21 AS build
-RUN mkdir /usr/src/project
-COPY . /usr/src/project
-WORKDIR /usr/src/project
+# Build the code in a maven-container
+FROM maven:3-eclipse-temurin-21 AS maven-build
+WORKDIR /opt/app
+COPY src ./src
+COPY pom.xml ./
 RUN --mount=type=cache,target=/root/.m2 mvn package -DskipTests
-RUN jar xf target/simplecode-0.0.1-SNAPSHOT.jar
+
+# Build the JRE directly in an Alpine container to avoid glibc/musl libc issues
+FROM eclipse-temurin:21-alpine AS jre-build
+WORKDIR /opt/app
+COPY --from=maven-build /opt/app/target/simplecode-0.0.1-SNAPSHOT.jar ./
+RUN jar xf simplecode-0.0.1-SNAPSHOT.jar
 RUN jdeps --ignore-missing-deps -q  \
     --recursive  \
     --multi-release 21  \
     --print-module-deps  \
     --class-path 'BOOT-INF/lib/*'  \
-    target/simplecode-0.0.1-SNAPSHOT.jar > deps.info
+    simplecode-0.0.1-SNAPSHOT.jar > deps.info
 RUN jlink \
+    --verbose \
     --add-modules $(cat deps.info) \
     --strip-debug \
     --compress 2 \
     --no-header-files \
     --no-man-pages \
-    --output /myjre
-    
-FROM alpine
-ENV JAVA_HOME /user/java/jdk21
-ENV PATH $JAVA_HOME/bin:$PATH
-COPY --from=build /myjre $JAVA_HOME
-RUN mkdir /project
-COPY --from=build /usr/src/project/target/simplecode-0.0.1-SNAPSHOT.jar /project/
-WORKDIR /project
-ENTRYPOINT java -jar simplecode-0.0.1-SNAPSHOT.jar
+    --output /customjre
+
+FROM alpine:3.18
+COPY --from=jre-build /customjre /opt/jre
+ENV JAVA_HOME=/opt/jre
+ENV PATH="$PATH:$JAVA_HOME/bin"
+
+COPY --from=maven-build /opt/app/target/simplecode-0.0.1-SNAPSHOT.jar /opt/app.jar
+ENTRYPOINT ["java","-jar","/opt/app.jar"]
+
