--- a/springboot/Dockerfile
+++ b/springboot/Dockerfile
@@ -3,8 +3,7 @@ RUN mkdir -p /opt/app/src
 COPY src /opt/app/src
 COPY pom.xml /opt/app
 RUN --mount=type=cache,target=/root/.m2 mvn -f /opt/app/pom.xml package
-# RUN mvn -f /opt/app/pom.xml clean package
 
 FROM eclipse-temurin:21-jre
 COPY --from=build /opt/app/target/simplecode-0.0.1-SNAPSHOT.jar /opt/app.jar
-CMD ["java","-jar","/opt/app.jar"]
+ENTRYPOINT ["java","-jar","/opt/app.jar"]
