--- a/springboot/Dockerfile-multistage-builder
+++ b/springboot/Dockerfile-multistage-builder
@@ -1,12 +1,11 @@
 FROM maven:3-eclipse-temurin-21 AS build
-RUN mkdir -p /opt/app/src
-COPY src /opt/app/src
-COPY pom.xml /opt/app
-RUN mvn -f /opt/app/pom.xml package
+WORKDIR /opt/app
+COPY src ./src
+COPY pom.xml .
+RUN mvn -f /opt/app/pom.xml package -DskipTests
 
 FROM eclipse-temurin:21-jre
-RUN mkdir -p /opt/app
-COPY --from=build /opt/app/target/simplecode-0.0.1-SNAPSHOT.jar /opt/app/simplecode-0.0.1-SNAPSHOT.jar
-ENTRYPOINT ["java","-jar","/opt/app/simplecode-0.0.1-SNAPSHOT.jar"]
+COPY --from=build /opt/app/target/simplecode-0.0.1-SNAPSHOT.jar /opt/app.jar
+ENTRYPOINT ["java","-jar","/opt/app.jar"]
 
 
