--- a/springboot/Dockerfile-multistage-layered
+++ b/springboot/Dockerfile-multistage-layered
@@ -1,11 +1,11 @@
 FROM maven:3-eclipse-temurin-21 AS maven
-RUN mkdir -p /opt/app/src
-COPY src /opt/app/src
-COPY pom.xml /opt/app
-RUN --mount=type=cache,target=/root/.m2 mvn -f /opt/app/pom.xml package
+WORKDIR /opt/app
+COPY src ./src
+COPY pom.xml .
+RUN --mount=type=cache,target=/root/.m2 mvn -f /opt/app/pom.xml package -DskipTests
 
 FROM eclipse-temurin:21-jre AS builder
-WORKDIR /application
+WORKDIR /opt/app
 COPY --from=maven /opt/app/target/simplecode-0.0.1-SNAPSHOT.jar application.jar
 RUN java -Djarmode=layertools -jar application.jar extract
 
