--- a/springboot/Dockerfile-new-user
+++ b/springboot/Dockerfile-new-user
@@ -1,4 +1,3 @@
-
 FROM maven:3-eclipse-temurin-21 AS build
 RUN mkdir -p /opt/app/src
 COPY src /opt/app/src
@@ -10,4 +9,4 @@ FROM eclipse-temurin:21-jre
 RUN useradd -ms /bin/bash newuser
 USER newuser
 COPY --from=build /opt/app/target/simplecode-0.0.1-SNAPSHOT.jar /opt/app.jar
-CMD ["java","-jar","/opt/app.jar"]
+ENTRYPOINT ["java","-jar","/opt/app.jar"]
