--- a/springboot/Dockerfile-simple-ubuntu
+++ b/springboot/Dockerfile-simple-ubuntu
@@ -2,5 +2,5 @@ FROM ubuntu:24.04
 RUN apt update 
 RUN apt install openjdk-21-jre-headless -y
 COPY target/simplecode-0.0.1-SNAPSHOT.jar /opt/app.jar
-CMD ["java","-jar","/opt/app.jar"]
+ENTRYPOINT ["java","-jar","/opt/app.jar"]
 
