--- a/springboot/Dockerfile-multistage-layered
+++ b/springboot/Dockerfile-multistage-layered
@@ -11,8 +11,8 @@ RUN java -Djarmode=layertools -jar application.jar extract
 
 FROM eclipse-temurin:21-jre
 WORKDIR /application
-COPY --from=builder /application/dependencies/ ./    
-COPY --from=builder /application/spring-boot-loader/ ./
-COPY --from=builder /application/snapshot-dependencies/ ./
-COPY --from=builder /application/application/ ./
+COPY --from=builder /opt/app/dependencies/ ./    
+COPY --from=builder /opt/app/spring-boot-loader/ ./
+COPY --from=builder /opt/app/snapshot-dependencies/ ./
+COPY --from=builder /opt/app/application/ ./
 ENTRYPOINT ["java","org.springframework.boot.loader.launch.JarLauncher"]
